Bug 86147 - Saving a form by using "save as" doesn't work properly in LO Base.
Summary: Saving a form by using "save as" doesn't work properly in LO Base.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
4.3.3.1 rc
Hardware: Other Windows (All)
: medium minor
Assignee: Stephan Bergmann
URL:
Whiteboard: target:4.5.0 target:4.4.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2014-11-11 12:49 UTC by ratrace
Modified: 2015-12-17 08:39 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ratrace 2014-11-11 12:49:59 UTC
Hello,

i'm using LO 4.3.3.2 in windows xp (sp3).

To reproduce the problem,

1. Create a new database file (.odb)
2. Create a form in your database
3. Choose the menu File - Save as
4. Save your .odt file
5. Try to close the form that you saved, to the previous step.

When i'm trying to close the form it doesn't respond. The program works (it doesn't freezes) but i cannot close the form.

Thanks
Comment 1 Terrence Enger 2014-11-11 17:16:29 UTC
I was once(!) unable to close the Design View window with the daily
dbgutil bibisect version 2014-11-10.  When I try after that--for the
purpose of noting carefully what I did!--I cannot make the crash.
Sigh!

ratrace,

Can you please give us you steps again in more detail, taking them
down to each mouse click and each keystroke?  When you answer, please
the status of the bug report back to UNCONFIRMED.

Terry.
Comment 2 ratrace 2014-11-11 17:50:18 UTC
(In reply to Terrence Enger from comment #1)
> I was once(!) unable to close the Design View window with the daily
> dbgutil bibisect version 2014-11-10.  When I try after that--for the
> purpose of noting carefully what I did!--I cannot make the crash.
> Sigh!
> 
> ratrace,
> 
> Can you please give us you steps again in more detail, taking them
> down to each mouse click and each keystroke?  When you answer, please
> the status of the bug report back to UNCONFIRMED.
> 
> Terry.

1. I'm opening LO.
2. In the start up screen i choose File - create - database.
3. In the first screen of the wizard i'm clicking "next" and in the second screen "finish", without changing something.
4. I'm giving a name to the new database and i'm saving it to the desktop by the name "999".
5. I choose the forms icon to the left bar of LO Base main screen, and then "create form in design view" from the top of the screen.
6. A new form opens up and i'm saving it by hitting the keyboard keys ctrl + s, without making any change to the form, by giving the name "form1" in greek it is "Φόρμα1".
6. After saving the form i'm closing it (ctrl + w) and i can see that it is saved in the forms area.
7. Then i double click to the "form1" icon and i'm opening the form that i created.
8. I choose menu File - save a copy as.
9. I'm giving the name "789" to the .odt file and i'm saving it to the desktop by clicking save.
10. In the last step i'm trying to close the "form1" window by clicking the "x" button, to the upper right corner but it doesn't work. I'm having the same result if i choose File - close. Nothing happens, the form stays open.
11. The only option i'm having to close that window (form1) is to choose File - exit from Libreoffice.

Thanks
Comment 3 Terrence Enger 2014-11-11 23:35:33 UTC
Thank you, ratrace, for those details.  They let me get on with this.

I have created the stuck-open window in Step 10 in LibreOffice
versions:
(*) Version: 4.4.0.0.alpha2+
    Build ID: 06a5b619a76c96783ee67bdcfd21f203d3ddb53c
    TinderBox: Win-x86@39, Branch:master, Time: 2014-11-10_07:00:36
(*) daily dbgutil bibisect version 2014-11-10.
(*) 43all bibisect version latest
So setting status NEW.

The closed the window without difficulty in LibreOffice from the 43all
bibisect repository, version oldest.  So, setting keyword regression.

I shall run a bibisect, unless somebody beats me to it.
Comment 4 Terrence Enger 2014-11-12 00:51:51 UTC
Working in the 43-all bibisect repository, I see  from `git bisect bad`:

    52abf2b644b9c2396246581d02b1796dd9cd2dff is the first bad commit
    commit 52abf2b644b9c2396246581d02b1796dd9cd2dff
    Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
    Date:   Mon Dec 10 08:11:00 2012 +0000

        source-hash-37b9e290d9e3d20652df0abe1a1458412f3cfe2c
    
        commit 37b9e290d9e3d20652df0abe1a1458412f3cfe2c
        Author:     Peter Foley <pefoley2@verizon.net>
        AuthorDate: Thu Aug 16 13:51:54 2012 -0400
        Commit:     Peter Foley <pefoley2@verizon.net>
        CommitDate: Thu Aug 16 17:54:54 2012 -0400
    
            fix openssl build with VS2012
    
            Change-Id: Ic0e04ab920c50320785f2e1b847026cc4e7b1e0d

    :100644 100644 d5cd0596d367951df92d05f577e3847bde477733 445034760a67365d3bec4a003cb733c0b8aae97a M	ccache.log
    :100644 100644 53577b741827fef73674a1c0aaa1d0560dcd664c eca255af392eb4acc69d7b7ef6a6015a38572939 M	commitmsg
    :100644 100644 bacae80c7411d67901c4c9adc72d319e9e573e12 d37363a1adcf8fb7741f59097bde880735ff615d M	dev-install.log
    :100644 100644 0c0655ade12ef70098f9b245d5f335386c04f1e7 fd98319ab98b4c456f9b3fa79c533aef66a99e06 M	make.log
    :040000 040000 7ffb4e08414500e61817e4ae252957e056603388 aac755ee7c8731f009be798fe62741f3c09250cf M	opt

and from `git bisect log`:

    # bad: [423a84c4f7068853974887d98442bc2a2d0cc91b] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
    # good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
    git bisect start 'latest' 'oldest'
    # bad: [e02439a3d6297a1f5334fa558ddec5ef4212c574] source-hash-6b8393474974d2af7a2cb3c47b3d5c081b550bdb
    git bisect bad e02439a3d6297a1f5334fa558ddec5ef4212c574
    # good: [8f4aeaad2f65d656328a451154142bb82efa4327] source-hash-1885266f274575327cdeee9852945a3e91f32f15
    git bisect good 8f4aeaad2f65d656328a451154142bb82efa4327
    # bad: [9995fae0d8a24ce31bcb5e9cd0459b69cfbf7a02] source-hash-8600bc24bbc9029e92bea6102bff2921bc10b33e
    git bisect bad 9995fae0d8a24ce31bcb5e9cd0459b69cfbf7a02
    # bad: [51b63dca7427db64929ae1885d7cf1cc7eb0ba28] source-hash-806d18ae7b8c241fe90e49d3d370306769c50a10
    git bisect bad 51b63dca7427db64929ae1885d7cf1cc7eb0ba28
    # bad: [446a69834acf747d9d18841ec583512ae8fa42e7] source-hash-06a8ca9339f02fccf6961c0de77c49673823b35f
    git bisect bad 446a69834acf747d9d18841ec583512ae8fa42e7
    # bad: [d2720e99b9e6cb7b099256cc7a6d2b3f907b8d7c] source-hash-7dd6c0a8372810f48e6bee35a11ac4ad0432640b
    git bisect bad d2720e99b9e6cb7b099256cc7a6d2b3f907b8d7c
    # bad: [98e26b741cd0eff4b7549d782d7db5a1e98eb1a6] source-hash-c29af1572ad15ac5199a09e5812fb8354c165329
    git bisect bad 98e26b741cd0eff4b7549d782d7db5a1e98eb1a6
    # good: [a72763112e846bcb1c4e4c6f1612ccab6ac73772] source-hash-4662df8a7561ce71ba00accbb5170e10818d6008
    git bisect good a72763112e846bcb1c4e4c6f1612ccab6ac73772
    # bad: [241d451e09694446622f9767fb76db50481c9e32] source-hash-c3aa1cefdc6521d34a2a32c20bae1593e1edb5ba
    git bisect bad 241d451e09694446622f9767fb76db50481c9e32
    # bad: [52abf2b644b9c2396246581d02b1796dd9cd2dff] source-hash-37b9e290d9e3d20652df0abe1a1458412f3cfe2c
    git bisect bad 52abf2b644b9c2396246581d02b1796dd9cd2dff
    # first bad commit: [52abf2b644b9c2396246581d02b1796dd9cd2dff] source-hash-37b9e290d9e3d20652df0abe1a1458412f3cfe2c
Comment 5 Alex Thurgood 2015-01-03 17:39:23 UTC
Adding self to CC if not already on
Comment 6 Matthew Francis 2015-01-14 08:33:22 UTC
Following the instructions in comment 2, the close button stops working at the below commit.

Adding Cc: to sbergman@redhat.com; Could you possibly take a look at this? Thanks


commit 4e923fb5a293ce570974e620b87ff84ccb6a139b
Author: Stephan Bergmann <sbergman@redhat.com>
Date:   Thu Aug 16 17:53:45 2012 +0200

    fdo#53280: Reset read-only UI after successful Save As
    
    Change-Id: Ica9214d3655df27bbb259c463a7589a842f01c47
Comment 7 Commit Notification 2015-01-19 11:45:28 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cfce342e6bba803349f9234bdcd9351df68be824

fdo#86147: Do not reset r/o mode for SID_SAVETO

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Stephan Bergmann 2015-01-19 15:30:41 UTC
(In reply to Commit Notification from comment #7)
> Stephan Bergmann committed a patch related to this issue.
> It has been pushed to "master":
> 
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=cfce342e6bba803349f9234bdcd9351df68be824
> 
> fdo#86147: Do not reset r/o mode for SID_SAVETO
> 
> It will be available in 4.5.0.

requested backport to libreoffice-4-4 towards LO 4.4.1 at <https://gerrit.libreoffice.org/#/c/14016/>

(on libreoffice-4-3, more seems to be broken; with and without this patch, after step 9 of comment 2 the form document is no longer r/o, and the patch does not make step 10 succeed; so I'll leave LO 4.3 alone)
Comment 9 Commit Notification 2015-01-19 15:57:51 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=030f26259f44d1e38623ce8e40015beedd57cd7e&h=libreoffice-4-4

fdo#86147: Do not reset r/o mode for SID_SAVETO

It will be available in 4.4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Robinson Tryon (qubit) 2015-12-17 08:39:10 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]