fdo#86147: Do not reset r/o mode for SID_SAVETO

...(aka "Save Copy as...", as is used when the document is actually a DB form)
but only for true "Save As..."  For reasons remaining un-debugged, calling
SetReadOnlyUI(false) on the former would somehow lose the connection to the
embeddedobj Interceptor instance.

Change-Id: I334cd6c5ebd596e408357bb6820800075217d2d1